# donutstudio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: api-request.md  docs-fix.md  script-bug.md
docs/: api-reference.md  downloads.md  lua-scripting.md  skinning.md
examples/Analysis/: list-tracks.lua  note-stats.lua
examples/Generators/: build-major-triad.lua  octave-double.lua
examples/Skins/: README.md
examples/Skins/console-knob/: README.md  make_console_knob.py
examples/Transforms/: humanize-velocity.lua  retrograde.lua  snap-to-c-major.lua
flatpak/: README.md  online.donutsdelivery.Arbit.desktop  online.donutsdelivery.Arbit.metainfo.xml  online.donutsdelivery.Arbit.yml  online.donutsdelivery.DonutStudio.desktop  online.donutsdelivery.DonutStudio.metainfo.xml  online.donutsdelivery.DonutStudio.yml
skills/: README.md
skills/arbit-video-editing/: SKILL.md
skills/arbit-video-editing/knowledge/: editorial-rules.md  lessons.md
skills/donutstudio-video-editing/: SKILL.md
skills/donutstudio-video-editing/knowledge/: editorial-rules.md  lessons.md
video-helper/: CMakeLists.txt  NOTICE.md  PINGPONG.md  PROTOCOL.md  README.md
video-helper/patches/: ncnn_enable_external_memory_fd.cmake
video-helper/shaders/: arbit_contract.slang
video-helper/shared/: SharedGpuSurfaceProtocol.h  VideoFrameSharedMemory.h
video-helper/src/: block_b_analyzer.h  block_b_defs.h  block_c_packer.h  effect_defs.h  exporter.cpp  exporter.h  fd_socket.cpp  fd_socket.h  gl_loader.cpp  gl_loader.h  gpu_caps.h  gpu_export.cpp  gpu_export.h  gpu_export_common.h  gpu_export_d3d.cpp  gpu_export_d3d.h  gpu_export_iosurface.cpp  gpu_export_iosurface.h  gpu_export_vk.cpp  gpu_export_vk.h  interp.cpp  interp.h  js_hook.h  lua_hook.h  lut_loader.cpp  lut_loader.h  main.cpp  media.cpp  media.h  mix_analyze.h  mod_defs.h  model_fetch.h  particle_engine.cpp  particle_engine.h  renderer.cpp  renderer.h  rife.cpp  rife.h  rife_ncnn.cpp  rife_ncnn.h  (+6 more)
video-helper/src/rife_net/: rife.cpp  rife.h
video-helper/src/shader_compile/: shader_lang.h  slang_frontend.h  spirv_ingest.h
video-helper/tests/: param_grammar_tests.cpp
